--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,80 @@
+ul,
+li,
+button,
+p,
+select,
+input,
+option {
+  all: unset;
+}
+
+ul,
+li,
+option,
+select,
+div {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+@font-face {
+  font-family: "Helvetica_Neue_Bold";
+  src: url("/fonts/HelveticaNeue/Helvetica Neu Bold.ttf");
+}
+
+@font-face {
+  font-family: "Helvetica_Neue_Light";
+  src: url("/fonts/HelveticaNeue/HelveticaNeue Light.ttf");
+}
+
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --bold: "Helvetica_Neue_Bold", sans-serif;
+  --light: "Helvetica_Neue_Light", sans-serif;
+  --yellow: #fad338;
+  --dark-yellow: #f2bc07;
+  --light-black: #111110;
+  --two-tone-dark: linear-gradient(#0b0e11, #0c0c0c);
+  --box-shadow: 0 0 1px 1px var(--yellow);
+  --max-width: 1300px;
+  --columns: repeat(5, 1fr);
 }
 
-@media (prefers-color-scheme: dark) {
+@media (max-width: 1300px) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+    --columns: repeat(4, 1fr);
+  }
+}
+@media (max-width: 812px) {
+  :root {
+    --columns: repeat(3, 1fr);
   }
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@media (max-width: 600px) {
+  :root {
+    --columns: repeat(2, 1fr);
   }
+}
+
+@media (max-width: 400px) {
+  :root {
+    --columns: repeat(1, 1fr);
+  }
+}
+
+body {
+  background: var(--two-tone-dark);
+  color: rgb(234, 236, 239);
+  font-family: var(--light);
+}
+
+button {
+  padding: 0.5rem;
+  background-color: var(--light-black);
+  border-radius: 3px;
 }
