added some finishing touches to the styling

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,3 +14,11 @@
   cursor: pointer;
   border-radius: 3px;
 }
+
+.button {
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: black;
+}
