--- a/styles/Loader.module.css
+++ b/styles/Loader.module.css
@@ -26,7 +26,7 @@
   margin: 1rem;
   border-radius: 50%;
   box-shadow: var(--box-shadow);
-  background: var(--two-tone-dark);
+  background: rgba(242, 188, 7, 0.5);
 }
 
 .animate-first {
